<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/largeLen"
        android:layout_height="@dimen/largeLen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pinkPurple"
        android:text="@string/pink_layout"
        android:textSize="@dimen/lilText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/largeLen"
        android:layout_height="@dimen/largeLen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/navy"
        android:text="@string/blue_layout"
        android:textColor="@color/white"
        android:textSize="@dimen/lilText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/largeLen"
        android:layout_height="@dimen/largeLen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/peach"
        android:text="@string/orange_layout"
        android:textSize="@dimen/lilText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/largeLen"
        android:layout_height="@dimen/largeLen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/greyGreen"
        android:text="@string/green_layout"
        android:textSize="@dimen/lilText"/>
    <TextView
        android:id="@+id/layoutBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/challengeHeader"
        android:textSize="@dimen/bigText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBegin"
        android:text="@string/callToAction"
        android:textSize="@dimen/lilText"
        android:layout_margin="@dimen/marginLen"/>

</androidx.constraintlayout.widget.ConstraintLayout>