<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25"/>
    <TextView
        android:id="@+id/weirdBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/smallLen"
        app:layout_constraintLeft_toLeftOf="@id/vertLine3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".10"
        android:gravity="center"
        android:background="@color/navy"
        android:textColor="@color/white"
        android:text="@string/blueLabel"
        android:textSize="@dimen/bigText"
        android:padding="@dimen/marginLen"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnH3"
        android:layout_width="0dp"
        android:layout_height="@dimen/smallLen"
        app:layout_constraintLeft_toLeftOf="@id/vertLine3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weirdBtn"
        android:layout_marginTop="@dimen/marginLen"
        android:background="@color/white"
        android:text="@string/home_layout"
        android:textSize="@dimen/lilText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnO3"
        android:layout_width="@dimen/medLen"
        android:layout_height="@dimen/medLen"
        android:text="@string/orange_layout"
        app:layout_constraintLeft_toLeftOf="@id/vertLine3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:textSize="@dimen/lilText"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnY3"
        android:layout_width="@dimen/medLen"
        android:layout_height="@dimen/medLen"
        android:text="@string/yellow_layout"
        app:layout_constraintLeft_toLeftOf="@id/vertLine3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:textSize="@dimen/lilText"/>

</androidx.constraintlayout.widget.ConstraintLayout>